--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Productos/oracle_jdbc/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="/Ofuscado/target/Ofuscado-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
